--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -30,6 +30,7 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.2.1",
+    "@tailwindcss/postcss": "^4.2.1",
     "vite": "^7.3.1"
   }
 }
